<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">POSIT Science version 0.1a</string>
    <string name="menu_about">About POSIT </string>  
    <string name="button_picture">Take Picture</string>
    <string name="button_map">Show Map</string>  
    <string name="menu_newfind">New Find</string>
    <string name="menu_listfinds">List Finds</string>
    <string name="menu_camera">Take Picture</string>
    <string name="menu_delete">Delete Entry</string>
    <string name="map_overlay_own_name">Me</string>
    <string name="menu_mapfinds">Map Finds</string>
    <string name="preferences">Preferences</string>
    <string name="untitled">Untitled</string>
    <string name="saving_to_disk">Saving to Disk</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="confirm">Save to DB</string>
    <string name="cancel">Cancel</string>
    <string name="label_victim">Victim Number</string>
    <string name="numberLabel">Number</string>
    <string name="typeLabel">Type</string>
    <string name="descriptionLabel">Description</string>
    <string name="save">Save</string>
    <string name="map">Map</string>
    <string name="camera">Camera</string>
    <string name="servers">Servers</string>
    <string name="sync">Sync</string>
    <string name="syncFindText">sync Finds</string>
    <string name="syncImagesText">sync Images</string>
    <string name="idLabel">Id: </string>
    <string name="nameLabel">Name</string>
    <string name="identifierLabel">Frequency</string>
    <string name="addLabel">Add</string>
    <string name="viewLabel">View</string>
    <string name="taggedLabel">Tagged</string>
    <string name="observationTypeLabel">Observation</string>
    <string name="ageLabel">Age</string>
    <string name="sexLabel">Sex</string>
    <string name="addNewNameLabel">Add New Name</string>
    <string name="addSightingLabel">Add Sighting</string>
    <string name="viewSightingsLabel">View Sightings</string>
    <string name="defaultInstanceLabel">Entry</string>
    <string name="okLabel">OK</string>
    <string name="cancelLabel">Cancel</string>
    <!--    Useful for hiding some things for a while   -->
    <string name="blankLabel"></string>
    <string name="weatherLabel">Weather</string>
    <string name="about">Welcome to POSIT! 
    \nPortable Open Search and Identification Tool
    \n\n@author Prasanna Gautam
    \n@author T. de Lanerolle
    \n@author R. Morelli
    \n\nThe Humanitarian FOSS Project
    \nTrinity College
    \n\nhttp://www.hfoss.org
    \nPress Back to continue
    </string>
    
</resources>