<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:scrollbars="vertical|horizontal"
>
<TableLayout
android:id="@+id/contents_new_find"
android:layout_width="fill_parent"
android:layout_height="48sp"
android:orientation="vertical"
android:stretchColumns="0,1"
>
<TableRow
android:layout_width="fill_parent"
android:layout_height="24sp"
> 
<LinearLayout
android:id="@+id/linear_layout_1"
android:layout_width="fill_parent"
android:layout_height="24sp"
>
<TextView
android:id="@+id/latitudeLabel"
android:text="@string/latitude"
android:layout_width="wrap_content"
android:layout_height="fill_parent"
/>
<TextView
android:id="@+id/latitudeText"
android:layout_width="wrap_content"
android:layout_height="fill_parent"
android:maxLength="10"
android:maxLines="1"
/>
</LinearLayout>
<LinearLayout
android:layout_width="fill_parent"
android:layout_height="24sp"
>
<TextView
android:id="@+id/longitudeLabel"
android:text="@string/longitude"
android:layout_width="wrap_content"
android:layout_height="fill_parent"
android:paddingRight= "2sp"
/>
<TextView
android:id="@+id/longitudeText"
android:layout_width="wrap_content"
android:layout_height="fill_parent"
android:maxLength="10"
android:maxLines="1"
/>
</LinearLayout> 
</TableRow>
<TableRow
android:layout_width="fill_parent"
android:layout_height="24sp"
>
<LinearLayout
android:layout_width="fill_parent"
android:layout_height="24sp">

<TextView 
android:id="@+id/dateLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="Date:"
/>
<TextView 
android:id="@+id/dateText"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
/>
</LinearLayout>
<LinearLayout
android:layout_width="fill_parent"
android:layout_height="24sp">
<TextView
android:id="@+id/numberLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/idLabel"
/>
<TextView
android:id="@+id/numberText"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
/>
</LinearLayout>
</TableRow>
</TableLayout>

<RelativeLayout
android:layout_width="fill_parent"
android:layout_height="wrap_content"
>

<TextView
android:id="@+id/nameLabel"
android:layout_width="80sp"
android:layout_height="wrap_content"
android:text="@string/nameLabel"
/>
<Spinner android:id="@+id/nameSpinner"
android:layout_width="180sp"
android:layout_height="wrap_content"
android:layout_alignTop="@id/nameLabel"
android:layout_toRight="@id/nameLabel"
android:drawSelectorOnTop="true"
/>
<Button android:id="@+id/addNameButton"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:layout_alignTop="@id/nameSpinner"
android:layout_toRight="@id/nameSpinner"
android:text="@string/addLabel"
/>
</RelativeLayout>
<RelativeLayout
android:layout_width="fill_parent"
android:layout_height="wrap_content">

<TextView
android:id="@+id/identifierLabel"
android:layout_width="80sp"
android:layout_height="wrap_content"
android:text="@string/identifierLabel"
/>
<EditText
android:id = "@+id/identifierText"
android:layout_width="120sp"
android:layout_height="wrap_content"
android:layout_toRight="@id/identifierLabel"
/>
<!-- <TextView
android:id = "@+id/taggedLabel"
android:layout_width="30sp"
android:layout_height="wrap_content"
android:layout_toRight="@id/identifierText"
android:text="@string/taggedLabel"
/>
-->
<CheckBox
android:id = "@+id/taggedCheckBox"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:layout_toRight="@id/identifierText"
android:text="@string/taggedLabel"
/>
</RelativeLayout>
<LinearLayout
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation ="horizontal"
>
<TextView
android:layout_width="80sp"
android:layout_height="wrap_content"
android:text ="@string/ageLabel"
/>
<EditText
android:id="@+id/ageText"
android:layout_width="80sp"
android:layout_height="wrap_content"
/>
<RadioGroup
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:id="@+id/sexRadioGroup"
>
<RadioButton
android:id="@+id/maleRadioButton"
android:layout_width="wrap_content"
android:layout_height="fill_parent"
android:text="M"
/>
<RadioButton
android:id="@+id/femaleRadioButton"
android:layout_width="wrap_content"
android:layout_height="fill_parent"
android:text="F"
/>
</RadioGroup>
</LinearLayout>

<LinearLayout
android:layout_width="fill_parent"
android:layout_height="200sp"
android:orientation="vertical"
>

<TextView 
android:id="@+id/descriptionLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/descriptionLabel"
/>
<EditText
android:id="@+id/descriptionText"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:padding="10dip"
android:scrollbars="vertical"
android:fadingEdge="vertical"/>
</LinearLayout>
<RelativeLayout 
android:paddingTop="10sp"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
>
<ImageButton
android:id="@+id/mapButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/map"
android:src="@drawable/maps"
android:gravity ="left"
/>
<ImageButton
android:padding="10sp"
android:id="@+id/cameraButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_toRight="@id/mapButton"
android:src="@drawable/camera_icon_32x32"
android:gravity="center"
/>
<ImageButton
android:padding="10sp"
android:id="@+id/saveButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:src="@drawable/add"
android:layout_toRight="@id/cameraButton"
/>
<ImageButton
android:padding="10sp"
android:id="@+id/viewGalleryButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:src="@drawable/gallery"
android:layout_toRight="@id/saveButton"
android:visible="false"
/>
</RelativeLayout>

</LinearLayout>
</ScrollView>